  
  * ProDy can optionally rename existing files with :file:`.BAK` extension
    instead of overwriting thm.  This behavior can be activated using
    :class:`~prody.confProDy` function. 
    
**Improvements**:

  * :func:`~ensemble.writeDCD` file accepts :class:`~atomic.AtomGroup` or 
    other :class:`~atomic.Atomic` instances as *trajectory* argument.

**Changes**:

  * :class:`~ensemble.DCDFile` instances, when closed, raise exception, similar
    to behavior of :class:`file` objects in Python. 
    
  * Title of :class:`~atomic.AtomGroup` instances resulting from copying an 
    :class:`~atomic.Atomic` instances does not start with 'Copy of'.
    
  * :func:`~prody.changeVerbosity` and :func:`~prody.getVerbosityLevel`
    are renamed as :func:`~prody.setVerbosity` and :func:`~prody.getVerbosity`,
    respectively. Old names will be removed in v1.0.

**Bugfix**:

  * Fixed problems in :func:`~atomic.loadAtoms` and :func:`~atomic.saveAtoms`
    functions.


Release 0.9.1 (Nov 9, 2011)
===============================================================================

**Bug Fixes**:

  * Fixed problems with reading and writing configuration files.
  * Fixed problem with importing nose for testing.

Release 0.9 (Nov 8, 2011)
===============================================================================

**New Features**:

  * `PDBML <http://pdbml.pdb.org/>`_ and `mmCIF <http://mmcif.pdb.org/>`_ files
    can be retrieved using :func:`~proteins.fetchPDB` function.

  * :func:`~proteins.getPDBLocalFolder` and :func:`~proteins.setPDBLocalFolder`
    functions are implemented for local PDB folder management.
    
  * :func:`~proteins.parsePDBHeader` is implemented for convenient parsing of
    header data from :file:`.pdb` files.
    
  * :func:`~proteins.showProtein` is implemented to allow taking a quick look
    at protein structure.

  * :class:`~proteins.Chemical` and :class:`~proteins.Polymer` classes are 