@@ -1,5 +1,5 @@
 File;Type;Py Version;Size;Downloads
-`ProDy-0.9.1.tar.gz <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.9.1.tar.gz>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=9d866bd6c128d7532f711dae8c9f961c>`_);Source;;673KB;124
-`ProDy-0.9.1.win32-py2.6.exe <http://pypi.python.org/packages/2.6/P/ProDy/ProDy-0.9.1.win32-py2.6.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=2907f9e395b1bd75b92b8566f2b07773>`_);MS Windows installer;2.6;424KB;39
-`ProDy-0.9.1.win32-py2.7.exe <http://pypi.python.org/packages/2.7/P/ProDy/ProDy-0.9.1.win32-py2.7.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=a7124c6781046d61aa5278b04559e17a>`_);MS Windows installer;2.7;872KB;55
-`ProDy-0.9.1.zip <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.9.1.zip>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=1784fd7cf285915a3dff56b93b4b6f37>`_);Source;;706KB;99
+`ProDy-0.9.1.tar.gz <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.9.1.tar.gz>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=9d866bd6c128d7532f711dae8c9f961c>`_);Source;;673KB;152
+`ProDy-0.9.1.win32-py2.6.exe <http://pypi.python.org/packages/2.6/P/ProDy/ProDy-0.9.1.win32-py2.6.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=2907f9e395b1bd75b92b8566f2b07773>`_);MS Windows installer;2.6;424KB;47
+`ProDy-0.9.1.win32-py2.7.exe <http://pypi.python.org/packages/2.7/P/ProDy/ProDy-0.9.1.win32-py2.7.exe>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=a7124c6781046d61aa5278b04559e17a>`_);MS Windows installer;2.7;872KB;62
+`ProDy-0.9.1.zip <http://pypi.python.org/packages/source/P/ProDy/ProDy-0.9.1.zip>`_ (`md5 <http://pypi.python.org/pypi?:action=show_md5&digest=1784fd7cf285915a3dff56b93b4b6f37>`_);Source;;706KB;113
