@@ -1,7 +1,7 @@
 Release;Date;Downloads
-0.9.1;November  9, 2011;317
-0.9;November  8, 2011;295
-0.8.3;October 17, 2011;524
+0.9.1;November  9, 2011;374
+0.9;November  8, 2011;315
+0.8.3;October 17, 2011;544
 0.8.2;October 14, 2011;131
 0.8.1;September 16, 2011;359
 0.8;August 24, 2011;417
@@ -19,4 +19,4 @@ Release;Date;Downloads
 0.1.2;November  9, 2010;345
 0.1.1;November  8, 2010;360
 0.1.0;November  7, 2010;378
-Total;December  6, 2011;8845
+Total;December 19, 2011;8942
