@@ -5,4 +5,4 @@
     <p>See <a href="{{ pathto("getprody") }}">Getting ProDy</a> for installing 
        instructions, or install it with: 
        <pre>easy_install -U ProDy</pre>   
-    Total of 8845 downloads (see <a href="{{ pathto("reports/pypi_statistics") }}">details</a>).</p>
+    </p>
