@@ -7,15 +7,8 @@ ProDy Download Statistics
 
 The following statistics are retrieved from |pypi|.
 
-.. 
-  and http://pypi.python.org/stats/months/.
 
-
-.. csv-table::
-   :file: ../_static/pypi_statistics.csv
-   :header-rows: 1
-   :stub-columns: 1
-   :delim: ;
+.. image:: ../_static/ProDy_downloads.png
 
 
 Python code
@@ -24,4 +17,4 @@ Python code
 The following code is used for retrieving the statistics and generating 
 a comma-seperated values (CSV) file:
 
-.. literalinclude:: /pypi.py
+.. literalinclude:: /pyps.py
